# remplissage

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ToDoList.md  ToDoList.txt  decoupage.c  decoupage.h  gui.c  gui.h  main.c  remplissage.c  remplissage.h  shapes.c  shapes.h
python/: LIRZIN_TALVET_python_Fenetrage_Remplissage.py
